<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3AAACF"
    >

    <include
        android:id="@+id/app_bar"
        layout="@layout/tittle_left" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/myCustomEditText"
        android:id="@+id/list_item"
        android:entries="@array/cleanlist1"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/myCustomEditText"
        android:hint="@string/date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:layout_below="@+id/list_item"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/time"

        style="@style/myCustomEditText"
        android:entries="@array/time"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/responsility"
        style="@style/myCustomEditText"
        android:entries="@array/res"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.guna.libmultispinner.MultiSelectionSpinner
        android:id="@+id/mySpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/myCustomEditText"
        android:layout_below="@+id/responsility"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/comment"
        style="@style/myCustomEditText"
        android:hint="@string/comment"
        android:layout_height="50dp"
        android:layout_below="@+id/mySpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/save" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/send"
        android:id="@+id/send"
        style="@style/myCustomButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/myCustomButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_above="@+id/send"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>